test/valid/fc36956_ArrayList/RegularNodeBoolean.plume


class RegularNodeBoolean extends RegularNode is
	field myValue : Boolean
	
	method getValue : () -> Boolean is
		myValue
		
