test/invalid/41625_AbstractInConcrete/C.plume


class C extends Object is 
	abstract method C : () -> String 
		
		
		
		
		
		
		
		
		
		
		
		
		
		
		
	method t : () -> String is 
		error 